<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:id="@+id/base_uri_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/OutlineEditText"
        android:hint="@string/label_base_address"
        android:inputType="textUri"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/useful_uri_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/OutlineEditText"
        android:hint="@string/label_useful_address"
        android:inputType="textUri"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/base_uri_et"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/refresh_useful_uri_btn"/>

    <FrameLayout
        android:id="@+id/refresh_useful_uri_btn"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:clickable="false"
        android:focusable="true"
        android:background="@drawable/bg_ripple_grey_color_primary_corners_8"
        android:paddingHorizontal="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/useful_uri_et"
        app:layout_constraintBottom_toBottomOf="@id/useful_uri_et">

        <TextView
            android:id="@+id/refresh_useful_uri_text_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_refresh"
            style="@style/Text_16_B"
            android:textColor="@color/white"
            android:layout_gravity="center"/>

        <ProgressBar
            android:id="@+id/refresh_useful_uri_loading_pb"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:indeterminateTint="@color/white"
            android:layout_gravity="center"
            android:visibility="invisible"/>

    </FrameLayout>

    <Button
        android:id="@+id/save_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Button"
        android:text="@string/save"
        android:textAllCaps="false"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/useful_uri_et"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>