<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/search_result_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_result_label"
        android:textStyle="bold"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <View
        android:id="@+id/top_divider_view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/grey"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/search_result_tv"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_films_rv"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:paddingVertical="8dp"
        android:clipToPadding="false"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="vertical"
        tools:listitem="@layout/item_search_film"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_divider_view"
        app:layout_constraintBottom_toTopOf="@id/bottom_divider_view"/>

    <TextView
        android:id="@+id/not_found_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_not_found"
        style="@style/Text_16_B"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/top_divider_view"
        app:layout_constraintBottom_toTopOf="@id/bottom_divider_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:id="@+id/bottom_divider_view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/grey"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@id/close_btn"/>

    <Button
        android:id="@+id/close_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextButton"
        android:text="@string/close"
        android:textColor="@color/red"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>